fixing broken font buttons on IE

--- a/gabrielflor_it/static/water/css/water.css
+++ b/gabrielflor_it/static/water/css/water.css
@@ -74,25 +74,22 @@ svg {
 	box-shadow: 0 0 50px 10px rgba(255, 255, 255, 0.4);
 }
 
-#font-controls {
-	position: absolute;
-	top: 0;
-	right: 0;
-}
-
 .font-control {
 	position: absolute;
-	top: 0;
+	top: 0em;
 	right: 0em;
-	padding: 0em 1em 0em 0;
+	width: 1em;
+	height: 1em;
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
-	text-decoration: none;
+	text-indent: -9999px;
+	overflow: hidden;
+	z-index: 10;
 	cursor: pointer;
 }
 
 .increase.font-control {
-	right: 1.25em;
+	right: 1em;
 	background-image: url('../img/plus_alt.png');
 }
 
